grammar/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParGrammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExpr -> Expr                               (0)
	Integer -> L_integ                                 (1)
	Char -> L_charac                                   (2)
	String -> L_quoted                                 (3)
	Ident -> L_ident                                   (4)
	RelOp -> L_RelOp                                   (5)
	Basic -> L_Basic                                   (6)
	Expr11 -> Integer                                  (7)
	Expr11 -> Char                                     (8)
	Expr11 -> String                                   (9)
	Expr11 -> Ident                                    (10)
	Expr11 -> 'true'                                   (11)
	Expr11 -> 'false'                                  (12)
	Expr11 -> '()'                                     (13)
	Expr11 -> '[]'                                     (14)
	Expr11 -> '!' Expr11                               (15)
	Expr11 -> '(' Expr ',' ListExpr ')'                (16)
	Expr11 -> '[' ListExpr ']'                         (17)
	Expr11 -> '(\\' ListIdent '->' Expr ')'            (18)
	Expr11 -> '(' Expr ')'                             (19)
	Expr10 -> Expr10 Expr11                            (20)
	Expr10 -> Expr11                                   (21)
	Expr9 -> Expr9 '*' Expr10                          (22)
	Expr9 -> Expr9 '/' Expr10                          (23)
	Expr9 -> Expr10                                    (24)
	Expr8 -> Expr8 '+' Expr9                           (25)
	Expr8 -> Expr8 '-' Expr9                           (26)
	Expr8 -> Expr8 '++' Expr9                          (27)
	Expr8 -> Expr9                                     (28)
	Expr7 -> '-' Expr7                                 (29)
	Expr7 -> Expr8                                     (30)
	Expr6 -> Expr6 RelOp Expr7                         (31)
	Expr6 -> Expr7                                     (32)
	Expr5 -> Expr5 '&' Expr6                           (33)
	Expr5 -> Expr6                                     (34)
	Expr4 -> Expr4 '|' Expr5                           (35)
	Expr4 -> Expr5                                     (36)
	Expr3 -> Expr3 ':' Expr4                           (37)
	Expr3 -> Expr4                                     (38)
	Expr2 -> Expr2 '@' Expr3                           (39)
	Expr2 -> Expr3                                     (40)
	Expr1 -> 'if' Expr 'then' Expr 'else' Expr1        (41)
	Expr1 -> 'let' Ident '=' Expr 'in' Expr1           (42)
	Expr1 -> Expr2                                     (43)
	Expr -> Expr1 '::' Type                            (44)
	Expr -> Expr1                                      (45)
	ListExpr -> Expr                                   (46)
	ListExpr -> Expr ',' ListExpr                      (47)
	ListIdent ->                                       (48)
	ListIdent -> Ident ListIdent                       (49)
	Type3 -> Basic                                     (50)
	Type3 -> Ident                                     (51)
	Type3 -> '(' Type ')'                              (52)
	Type2 -> Type2 '*' Type3                           (53)
	Type2 -> Type3                                     (54)
	Type1 -> Type1 '+' Type2                           (55)
	Type1 -> Type2                                     (56)
	Type -> Type1 '->' Type                            (57)
	Type -> '[' Type ']'                               (58)
	Type -> Type1                                      (59)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	'()'           { PT _ (TS _ 4) }
	'(\\'          { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	'::'           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'@'            { PT _ (TS _ 17) }
	'['            { PT _ (TS _ 18) }
	'[]'           { PT _ (TS _ 19) }
	']'            { PT _ (TS _ 20) }
	'else'         { PT _ (TS _ 21) }
	'false'        { PT _ (TS _ 22) }
	'if'           { PT _ (TS _ 23) }
	'in'           { PT _ (TS _ 24) }
	'let'          { PT _ (TS _ 25) }
	'then'         { PT _ (TS _ 26) }
	'true'         { PT _ (TS _ 27) }
	'|'            { PT _ (TS _ 28) }
	L_integ        { PT _ (TI $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_ident        { PT _ (TV $$) }
	L_RelOp        { PT _ (T_RelOp $$) }
	L_Basic        { PT _ (T_Basic $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExpr    rule  0
	Integer         rule  1
	Char            rule  2
	String          rule  3
	Ident           rule  4
	RelOp           rule  5
	Basic           rule  6
	Expr11          rules 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19
	Expr10          rules 20, 21
	Expr9           rules 22, 23, 24
	Expr8           rules 25, 26, 27, 28
	Expr7           rules 29, 30
	Expr6           rules 31, 32
	Expr5           rules 33, 34
	Expr4           rules 35, 36
	Expr3           rules 37, 38
	Expr2           rules 39, 40
	Expr1           rules 41, 42, 43
	Expr            rules 44, 45
	ListExpr        rules 46, 47
	ListIdent       rules 48, 49
	Type3           rules 50, 51, 52
	Type2           rules 53, 54
	Type1           rules 55, 56
	Type            rules 57, 58, 59

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'if'           shift, and enter state 27
	'let'          shift, and enter state 28
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 7
	Expr10         goto state 8
	Expr9          goto state 9
	Expr8          goto state 10
	Expr7          goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 18

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!'            reduce using rule 1
	'&'            reduce using rule 1
	'('            reduce using rule 1
	'()'           reduce using rule 1
	'(\\'          reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	'::'           reduce using rule 1
	'@'            reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'in'           reduce using rule 1
	'then'         reduce using rule 1
	'true'         reduce using rule 1
	'|'            reduce using rule 1
	L_integ        reduce using rule 1
	L_charac       reduce using rule 1
	L_quoted       reduce using rule 1
	L_ident        reduce using rule 1
	L_RelOp        reduce using rule 1
	%eof           reduce using rule 1


State 3

	Expr11 -> Integer .                                 (rule 7)

	'!'            reduce using rule 7
	'&'            reduce using rule 7
	'('            reduce using rule 7
	'()'           reduce using rule 7
	'(\\'          reduce using rule 7
	')'            reduce using rule 7
	'*'            reduce using rule 7
	'+'            reduce using rule 7
	'++'           reduce using rule 7
	','            reduce using rule 7
	'-'            reduce using rule 7
	'/'            reduce using rule 7
	':'            reduce using rule 7
	'::'           reduce using rule 7
	'@'            reduce using rule 7
	'['            reduce using rule 7
	'[]'           reduce using rule 7
	']'            reduce using rule 7
	'else'         reduce using rule 7
	'false'        reduce using rule 7
	'in'           reduce using rule 7
	'then'         reduce using rule 7
	'true'         reduce using rule 7
	'|'            reduce using rule 7
	L_integ        reduce using rule 7
	L_charac       reduce using rule 7
	L_quoted       reduce using rule 7
	L_ident        reduce using rule 7
	L_RelOp        reduce using rule 7
	%eof           reduce using rule 7


State 4

	Expr11 -> Char .                                    (rule 8)

	'!'            reduce using rule 8
	'&'            reduce using rule 8
	'('            reduce using rule 8
	'()'           reduce using rule 8
	'(\\'          reduce using rule 8
	')'            reduce using rule 8
	'*'            reduce using rule 8
	'+'            reduce using rule 8
	'++'           reduce using rule 8
	','            reduce using rule 8
	'-'            reduce using rule 8
	'/'            reduce using rule 8
	':'            reduce using rule 8
	'::'           reduce using rule 8
	'@'            reduce using rule 8
	'['            reduce using rule 8
	'[]'           reduce using rule 8
	']'            reduce using rule 8
	'else'         reduce using rule 8
	'false'        reduce using rule 8
	'in'           reduce using rule 8
	'then'         reduce using rule 8
	'true'         reduce using rule 8
	'|'            reduce using rule 8
	L_integ        reduce using rule 8
	L_charac       reduce using rule 8
	L_quoted       reduce using rule 8
	L_ident        reduce using rule 8
	L_RelOp        reduce using rule 8
	%eof           reduce using rule 8


State 5

	Expr11 -> String .                                  (rule 9)

	'!'            reduce using rule 9
	'&'            reduce using rule 9
	'('            reduce using rule 9
	'()'           reduce using rule 9
	'(\\'          reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	'++'           reduce using rule 9
	','            reduce using rule 9
	'-'            reduce using rule 9
	'/'            reduce using rule 9
	':'            reduce using rule 9
	'::'           reduce using rule 9
	'@'            reduce using rule 9
	'['            reduce using rule 9
	'[]'           reduce using rule 9
	']'            reduce using rule 9
	'else'         reduce using rule 9
	'false'        reduce using rule 9
	'in'           reduce using rule 9
	'then'         reduce using rule 9
	'true'         reduce using rule 9
	'|'            reduce using rule 9
	L_integ        reduce using rule 9
	L_charac       reduce using rule 9
	L_quoted       reduce using rule 9
	L_ident        reduce using rule 9
	L_RelOp        reduce using rule 9
	%eof           reduce using rule 9


State 6

	Expr11 -> Ident .                                   (rule 10)

	'!'            reduce using rule 10
	'&'            reduce using rule 10
	'('            reduce using rule 10
	'()'           reduce using rule 10
	'(\\'          reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	'++'           reduce using rule 10
	','            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	':'            reduce using rule 10
	'::'           reduce using rule 10
	'@'            reduce using rule 10
	'['            reduce using rule 10
	'[]'           reduce using rule 10
	']'            reduce using rule 10
	'else'         reduce using rule 10
	'false'        reduce using rule 10
	'in'           reduce using rule 10
	'then'         reduce using rule 10
	'true'         reduce using rule 10
	'|'            reduce using rule 10
	L_integ        reduce using rule 10
	L_charac       reduce using rule 10
	L_quoted       reduce using rule 10
	L_ident        reduce using rule 10
	L_RelOp        reduce using rule 10
	%eof           reduce using rule 10


State 7

	Expr10 -> Expr11 .                                  (rule 21)

	'!'            reduce using rule 21
	'&'            reduce using rule 21
	'('            reduce using rule 21
	'()'           reduce using rule 21
	'(\\'          reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	'++'           reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	':'            reduce using rule 21
	'::'           reduce using rule 21
	'@'            reduce using rule 21
	'['            reduce using rule 21
	'[]'           reduce using rule 21
	']'            reduce using rule 21
	'else'         reduce using rule 21
	'false'        reduce using rule 21
	'in'           reduce using rule 21
	'then'         reduce using rule 21
	'true'         reduce using rule 21
	'|'            reduce using rule 21
	L_integ        reduce using rule 21
	L_charac       reduce using rule 21
	L_quoted       reduce using rule 21
	L_ident        reduce using rule 21
	L_RelOp        reduce using rule 21
	%eof           reduce using rule 21


State 8

	Expr10 -> Expr10 . Expr11                           (rule 20)
	Expr9 -> Expr10 .                                   (rule 24)

	'!'            shift, and enter state 19
	'&'            reduce using rule 24
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	')'            reduce using rule 24
	'*'            reduce using rule 24
	'+'            reduce using rule 24
	'++'           reduce using rule 24
	','            reduce using rule 24
	'-'            reduce using rule 24
	'/'            reduce using rule 24
	':'            reduce using rule 24
	'::'           reduce using rule 24
	'@'            reduce using rule 24
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	']'            reduce using rule 24
	'else'         reduce using rule 24
	'false'        shift, and enter state 26
	'in'           reduce using rule 24
	'then'         reduce using rule 24
	'true'         shift, and enter state 29
	'|'            reduce using rule 24
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32
	L_RelOp        reduce using rule 24
	%eof           reduce using rule 24

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 54

State 9

	Expr9 -> Expr9 . '*' Expr10                         (rule 22)
	Expr9 -> Expr9 . '/' Expr10                         (rule 23)
	Expr8 -> Expr9 .                                    (rule 28)

	'&'            reduce using rule 28
	')'            reduce using rule 28
	'*'            shift, and enter state 52
	'+'            reduce using rule 28
	'++'           reduce using rule 28
	','            reduce using rule 28
	'-'            reduce using rule 28
	'/'            shift, and enter state 53
	':'            reduce using rule 28
	'::'           reduce using rule 28
	'@'            reduce using rule 28
	']'            reduce using rule 28
	'else'         reduce using rule 28
	'in'           reduce using rule 28
	'then'         reduce using rule 28
	'|'            reduce using rule 28
	L_RelOp        reduce using rule 28
	%eof           reduce using rule 28


State 10

	Expr8 -> Expr8 . '+' Expr9                          (rule 25)
	Expr8 -> Expr8 . '-' Expr9                          (rule 26)
	Expr8 -> Expr8 . '++' Expr9                         (rule 27)
	Expr7 -> Expr8 .                                    (rule 30)

	'&'            reduce using rule 30
	')'            reduce using rule 30
	'+'            shift, and enter state 49
	'++'           shift, and enter state 50
	','            reduce using rule 30
	'-'            shift, and enter state 51
	':'            reduce using rule 30
	'::'           reduce using rule 30
	'@'            reduce using rule 30
	']'            reduce using rule 30
	'else'         reduce using rule 30
	'in'           reduce using rule 30
	'then'         reduce using rule 30
	'|'            reduce using rule 30
	L_RelOp        reduce using rule 30
	%eof           reduce using rule 30


State 11

	Expr6 -> Expr7 .                                    (rule 32)

	'&'            reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	':'            reduce using rule 32
	'::'           reduce using rule 32
	'@'            reduce using rule 32
	']'            reduce using rule 32
	'else'         reduce using rule 32
	'in'           reduce using rule 32
	'then'         reduce using rule 32
	'|'            reduce using rule 32
	L_RelOp        reduce using rule 32
	%eof           reduce using rule 32


State 12

	Expr6 -> Expr6 . RelOp Expr7                        (rule 31)
	Expr5 -> Expr6 .                                    (rule 34)

	'&'            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	':'            reduce using rule 34
	'::'           reduce using rule 34
	'@'            reduce using rule 34
	']'            reduce using rule 34
	'else'         reduce using rule 34
	'in'           reduce using rule 34
	'then'         reduce using rule 34
	'|'            reduce using rule 34
	L_RelOp        shift, and enter state 48
	%eof           reduce using rule 34

	RelOp          goto state 47

State 13

	Expr5 -> Expr5 . '&' Expr6                          (rule 33)
	Expr4 -> Expr5 .                                    (rule 36)

	'&'            shift, and enter state 46
	')'            reduce using rule 36
	','            reduce using rule 36
	':'            reduce using rule 36
	'::'           reduce using rule 36
	'@'            reduce using rule 36
	']'            reduce using rule 36
	'else'         reduce using rule 36
	'in'           reduce using rule 36
	'then'         reduce using rule 36
	'|'            reduce using rule 36
	%eof           reduce using rule 36


State 14

	Expr4 -> Expr4 . '|' Expr5                          (rule 35)
	Expr3 -> Expr4 .                                    (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38
	':'            reduce using rule 38
	'::'           reduce using rule 38
	'@'            reduce using rule 38
	']'            reduce using rule 38
	'else'         reduce using rule 38
	'in'           reduce using rule 38
	'then'         reduce using rule 38
	'|'            shift, and enter state 45
	%eof           reduce using rule 38


State 15

	Expr3 -> Expr3 . ':' Expr4                          (rule 37)
	Expr2 -> Expr3 .                                    (rule 40)

	')'            reduce using rule 40
	','            reduce using rule 40
	':'            shift, and enter state 44
	'::'           reduce using rule 40
	'@'            reduce using rule 40
	']'            reduce using rule 40
	'else'         reduce using rule 40
	'in'           reduce using rule 40
	'then'         reduce using rule 40
	%eof           reduce using rule 40


State 16

	Expr2 -> Expr2 . '@' Expr3                          (rule 39)
	Expr1 -> Expr2 .                                    (rule 43)

	')'            reduce using rule 43
	','            reduce using rule 43
	'::'           reduce using rule 43
	'@'            shift, and enter state 43
	']'            reduce using rule 43
	'else'         reduce using rule 43
	'in'           reduce using rule 43
	'then'         reduce using rule 43
	%eof           reduce using rule 43


State 17

	Expr -> Expr1 . '::' Type                           (rule 44)
	Expr -> Expr1 .                                     (rule 45)

	')'            reduce using rule 45
	','            reduce using rule 45
	'::'           shift, and enter state 42
	']'            reduce using rule 45
	'else'         reduce using rule 45
	'in'           reduce using rule 45
	'then'         reduce using rule 45
	%eof           reduce using rule 45


State 18

	%start_pExpr -> Expr .                              (rule 0)

	%eof           accept


State 19

	Expr11 -> '!' . Expr11                              (rule 15)

	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 41

State 20

	Expr11 -> '(' . Expr ',' ListExpr ')'               (rule 16)
	Expr11 -> '(' . Expr ')'                            (rule 19)

	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'if'           shift, and enter state 27
	'let'          shift, and enter state 28
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 7
	Expr10         goto state 8
	Expr9          goto state 9
	Expr8          goto state 10
	Expr7          goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 40

State 21

	Expr11 -> '()' .                                    (rule 13)

	'!'            reduce using rule 13
	'&'            reduce using rule 13
	'('            reduce using rule 13
	'()'           reduce using rule 13
	'(\\'          reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'++'           reduce using rule 13
	','            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	':'            reduce using rule 13
	'::'           reduce using rule 13
	'@'            reduce using rule 13
	'['            reduce using rule 13
	'[]'           reduce using rule 13
	']'            reduce using rule 13
	'else'         reduce using rule 13
	'false'        reduce using rule 13
	'in'           reduce using rule 13
	'then'         reduce using rule 13
	'true'         reduce using rule 13
	'|'            reduce using rule 13
	L_integ        reduce using rule 13
	L_charac       reduce using rule 13
	L_quoted       reduce using rule 13
	L_ident        reduce using rule 13
	L_RelOp        reduce using rule 13
	%eof           reduce using rule 13


State 22

	Expr11 -> '(\\' . ListIdent '->' Expr ')'           (rule 18)

	'->'           reduce using rule 48
	L_ident        shift, and enter state 32

	Ident          goto state 38
	ListIdent      goto state 39

State 23

	Expr7 -> '-' . Expr7                                (rule 29)

	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 7
	Expr10         goto state 8
	Expr9          goto state 9
	Expr8          goto state 10
	Expr7          goto state 37

State 24

	Expr11 -> '[' . ListExpr ']'                        (rule 17)

	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'if'           shift, and enter state 27
	'let'          shift, and enter state 28
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 7
	Expr10         goto state 8
	Expr9          goto state 9
	Expr8          goto state 10
	Expr7          goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 35
	ListExpr       goto state 36

State 25

	Expr11 -> '[]' .                                    (rule 14)

	'!'            reduce using rule 14
	'&'            reduce using rule 14
	'('            reduce using rule 14
	'()'           reduce using rule 14
	'(\\'          reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	'++'           reduce using rule 14
	','            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	':'            reduce using rule 14
	'::'           reduce using rule 14
	'@'            reduce using rule 14
	'['            reduce using rule 14
	'[]'           reduce using rule 14
	']'            reduce using rule 14
	'else'         reduce using rule 14
	'false'        reduce using rule 14
	'in'           reduce using rule 14
	'then'         reduce using rule 14
	'true'         reduce using rule 14
	'|'            reduce using rule 14
	L_integ        reduce using rule 14
	L_charac       reduce using rule 14
	L_quoted       reduce using rule 14
	L_ident        reduce using rule 14
	L_RelOp        reduce using rule 14
	%eof           reduce using rule 14


State 26

	Expr11 -> 'false' .                                 (rule 12)

	'!'            reduce using rule 12
	'&'            reduce using rule 12
	'('            reduce using rule 12
	'()'           reduce using rule 12
	'(\\'          reduce using rule 12
	')'            reduce using rule 12
	'*'            reduce using rule 12
	'+'            reduce using rule 12
	'++'           reduce using rule 12
	','            reduce using rule 12
	'-'            reduce using rule 12
	'/'            reduce using rule 12
	':'            reduce using rule 12
	'::'           reduce using rule 12
	'@'            reduce using rule 12
	'['            reduce using rule 12
	'[]'           reduce using rule 12
	']'            reduce using rule 12
	'else'         reduce using rule 12
	'false'        reduce using rule 12
	'in'           reduce using rule 12
	'then'         reduce using rule 12
	'true'         reduce using rule 12
	'|'            reduce using rule 12
	L_integ        reduce using rule 12
	L_charac       reduce using rule 12
	L_quoted       reduce using rule 12
	L_ident        reduce using rule 12
	L_RelOp        reduce using rule 12
	%eof           reduce using rule 12


State 27

	Expr1 -> 'if' . Expr 'then' Expr 'else' Expr1       (rule 41)

	'!'            shift, and enter state 19
	'('            shift, and enter state 20
	'()'           shift, and enter state 21
	'(\\'          shift, and enter state 22
	'-'            shift, and enter state 23
	'['            shift, and enter state 24
	'[]'           shift, and enter state 25
	'false'        shift, and enter state 26
	'if'           shift, and enter state 27
	'let'          shift, and enter state 28
	'true'         shift, and enter state 29
	L_integ        shift, and enter state 2
	L_charac       shift, and enter state 30
	L_quoted       shift, and enter state 31
	L_ident        shift, and enter state 32

	Integer        goto state 3
	Char           goto state 4
	String         goto state 5
	Ident          goto state 6
	Expr11         goto state 7
	Expr10         goto state 8
	Expr9          goto state 9
	Expr8          goto state 10
	Expr7          goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 34

State 28

	Expr1 -> 'let' . Ident '=' Expr 'in' Expr1          (rule 42)

	L_ident        shift, and enter state 32

	Ident          goto state 33

State 29

	Expr11 -> 'true' .                                  (rule 11)

	'!'            reduce using rule 11
	'&'            reduce using rule 11
	'('            reduce using rule 11
	'()'           reduce using rule 11
	'(\\'          reduce using rule 11
	')'            reduce using rule 11
	'*'            reduce using rule 11
	'+'            reduce using rule 11
	'++'           reduce using rule 11
	','            reduce using rule 11
	'-'            reduce using rule 11
	'/'            reduce using rule 11
	':'            reduce using rule 11
	'::'           reduce using rule 11
	'@'            reduce using rule 11
	'['            reduce using rule 11
	'[]'           reduce using rule 11
	']'            reduce using rule 11
	'else'         reduce using rule 11
	'false'        reduce using rule 11
	'in'           reduce using rule 11
	'then'         reduce using rule 11
	'true'         reduce using rule 11
	'|'            reduce using rule 11
	L_integ        reduce using rule 11
	L_charac       reduce using rule 11
	L_quoted       reduce using rule 11
	L_ident        reduce using rule 11
	L_RelOp        reduce using rule 11
	%eof           reduce using rule 11


State 30

	Char -> L_charac .                                  (rule 2)

	'!'            reduce using rule 2
	'&'            reduce using rule 2
	'('            reduce using rule 2
	'()'           reduce using rule 2
	'(\\'          reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	'++'           reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	':'            reduce using rule 2
	'::'           reduce using rule 2
	'@'            reduce using rule 2
	'['            reduce using rule 2
	'[]'           reduce using rule 2
	']'            reduce using rule 2
	'else'         reduce using rule 2
	'false'        reduce using rule 2
	'in'           reduce using rule 2
	'then'         reduce using rule 2
	'true'         reduce using rule 2
	'|'            reduce using rule 2
	L_integ        reduce using rule 2
	L_charac       reduce using rule 2
	L_quoted       reduce using rule 2
	L_ident        reduce using rule 2
	L_RelOp        reduce using rule 2
	%eof           reduce using rule 2


State 31

	String -> L_quoted .                                (rule 3)

	'!'            reduce using rule 3
	'&'            reduce using rule 3
	'('            reduce using rule 3
	'()'           reduce using rule 3
	'(\\'          reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	'++'           reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	':'            reduce using rule 3
	'::'           reduce using rule 3
	'@'            reduce using rule 3
	'['            reduce using rule 3
	'[]'           reduce using rule 3
	']'            reduce using rule 3
	'else'         reduce using rule 3
	'false'        reduce using rule 3
	'in'           reduce using rule 3
	'then'         reduce using rule 3
	'true'         reduce using rule 3
	'|'            reduce using rule 3
	L_integ        reduce using rule 3
	L_charac       reduce using rule 3
	L_quoted       reduce using rule 3
	L_ident        reduce using rule 3
	L_RelOp        reduce using rule 3
	%eof           reduce using rule 3


State 32

	Ident -> L_ident .                                  (rule 4)

	'!'            reduce using rule 4
	'&'            reduce using rule 4
	'('            reduce using rule 4
	'()'           reduce using rule 4
	'(\\'          reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'->'           reduce using rule 4
	'/'            reduce using rule 4
	':'            reduce using rule 4
	'::'           reduce using rule 4
	'='            reduce using rule 4
	'@'            reduce using rule 4
	'['            reduce using rule 4
	'[]'           reduce using rule 4
	']'            reduce using rule 4
	'else'         reduce using rule 4
	'false'        reduce using rule 4
	'in'           reduce using rule 4
	'then'         reduce using rule 4
	'true'         reduce using rule 4
	'|'            reduce using rule 4
	L_integ        reduce using rule 4
	L_charac       reduce using rule 4
	L_quoted       reduce using rule 4
	L_ident        reduce using rule 4
	L_RelOp        reduce using rule 4
	%eof           reduce using rule 4


State 33

	Expr1 -> 'let' Ident . '=' Expr 'in' Expr1          (rule 42)

	'='            shift, and enter state 81


State 34

	Expr1 -> 'if' Expr . 'then' Expr 'else' Expr1       (rule 41)

	'then'         shift, and enter state 80


State 35

	ListExpr -> Expr .                                  (rule 46)
	ListExpr -> Expr . ',' ListExpr                     (rule 47)

	')'            reduce using rule 46
	','            shift, and enter state 79
	']'            reduce using rule 46


State 36

	Expr11 -> '[' ListExpr . ']'                        (rule 17)

	']'            shift, and enter state 78


State 37

	Expr7 -> '-' Expr7 .                                (rule 29)

	'&'            reduce using rule 29
	')'            reduce using rule 29
	','            reduce using rule 29
	':'            reduce using rule 29
	'::'           reduce using rule 29
	'@'            reduce using rule 29
	']'            reduce using rule 29
	'else'         reduce using rule 29
	'in'           reduce using rule 29
	'then'         reduce using rule 29
	'|'            reduce using rule 29
	L_RelOp        reduce using rule 29
	%eof           reduce using rule 29


State 38

	ListIdent -> Ident . ListIdent                      (rule 49)

	'->'           reduce using rule 48
	L_ident        shift, and enter state 32

	Ident          goto state 38
	ListIdent      goto state 77

State 39

	Expr11 -> '(\\' ListIdent . '->' Expr ')'           (rule 18)

	'->'           shift, and enter state 76


State 40

	Expr11 -> '(' Expr . ',' ListExpr ')'               (rule 16)
	Expr11 -> '(' Expr . ')'                            (rule 19)

	')'            shift, and enter state 74
	','            shift, and enter state 75


State 41

	Expr11 -> '!' Expr11 .                              (rule 15)
